# automate_stuff

./: .gitignore  README.md  moving_from_download.py  pdf_to_mp3.py  pdf_to_text.py  pyproject.toml  requirements.txt
