[tool.poetry]
name = "automate-stuff"
version = "0.1.0"
description = ""
authors = ["zastasja <anastasia_zh@bk.ru>"]
readme = "README.md"
packages = [{include = "automate_stuff"}]

[tool.poetry.dependencies]
python = "^3.10"
pyttsx3 = "^2.90"
pypdf = "^3.3.0"
pdfreader = "^0.1.12"
pdfplumber = "^0.7.6"
watchdog = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
